@startuml Diagrama de classes
!theme mono

skinparam linetype ortho

/' Objects '/
class Expander {
}

class Motor {
}

abstract class Movement {
}

class MovementTwoMotors {
}

class Robot {
}

struct Data {
}

struct Interrupt {
}

struct MotorController {
}

/' Inheritance relationships '/
Movement <|-- MovementTwoMotors

/' Aggregation relationships '/
.Motor *-up- .Expander
.Motor *-- .Interrupt
.Motor *-- .MotorController
.MotorController *-- .Interrupt
.Movement o-left- .Motor
.Robot o-- .Movement

/' Nested objects '/
.Movement *-right- .Data

@enduml
